@@ -150,10 +150,13 @@ ECL 1.0:
    assert_type_character(), assert_type_symbol().
 
  - Lisp functions which disappear: si:set-compiled-function-name,
-   si:extended-string-concatenate, si:wrong-type-argument.
+   si:extended-string-concatenate.
 
  - New C functions: ecl_stream_to_handle(), ecl_base_char_code(),
-   ecl_type_error(), ecl_check_cl_type(), ecl_check_type_string().
+   ecl_type_error(), ecl_check_cl_type(), ecl_check_type_string(),
+   ecl_fixnum_in_range().
+
+ - New Lisp functions: si:wrong-type-argument.
 
  - Functions renamed: backup_fopen() -> ecl_backup_fopen()
    char_code() -> ecl_char_code(), cl_log1() -> ecl_log1(),
